--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "imagekit": "^4.1.2",
     "mongodb": "^5.1.0",
     "nodemon": "^2.0.21",
     "openai": "^3.2.1"
